sal setup